[gd_scene load_steps=5 format=3 uid="uid://dkgsoi43djtvy"]

[ext_resource type="Script" uid="uid://bi83e6fmn5sl6" path="res://scripts/unit.gd" id="1_6e3tn"]
[ext_resource type="PackedScene" uid="uid://6hjv23dhua0r" path="res://scenes/components/hitbox.tscn" id="2_cx6aj"]
[ext_resource type="PackedScene" uid="uid://d11m51wbw54gb" path="res://scenes/components/state_machine.tscn" id="3_cx6aj"]
[ext_resource type="PackedScene" uid="uid://pyd0x5pbe8bl" path="res://scenes/components/health.tscn" id="4_6k8ya"]

[node name="Unit" type="CharacterBody2D"]
script = ExtResource("1_6e3tn")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AttackRaycast" type="RayCast2D" parent="."]

[node name="FriendlyRaycast" type="RayCast2D" parent="."]

[node name="Hitbox" parent="." instance=ExtResource("2_cx6aj")]

[node name="state_machine" parent="." instance=ExtResource("3_cx6aj")]

[node name="Health" parent="." instance=ExtResource("4_6k8ya")]
